output.txt
4
Traceback (most recent call last):
  File "testprogram.py", line 4, in <module>
    hold = input()
  File "<string>", line 1
    4 4 
      ^
SyntaxError: invalid syntax
